--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,10 @@ dependencies:
   cupertino_icons: ^1.0.8
   font_awesome_flutter: ^10.12.0
   dropdown_search: ^6.0.2
+  go_router: ^17.0.1
+  intl_phone_field: ^3.2.0
+  country_code_picker: ^3.4.1
+  google_fonts: ^7.0.2
 
 dev_dependencies:
   flutter_test:
