--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,22 +45,15 @@ dependencies:
   dio: ^5.9.0
   get_it: ^9.2.0
   fpdart: ^1.2.0
+  injectable: ^2.7.1+4
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
   flutter_lints: ^6.0.0
+  injectable_generator: ^2.12.0
+  build_runner: ^2.10.5
 
-# For information on the generic Dart part of this file, see the
-# following page: https://dart.dev/tools/pub/pubspec
-
-# The following section is specific to Flutter packages.
 flutter:
 
   # The following line ensures that the Material Icons font is
